tests/rosetta/transpiler/Swift/almost-prime.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:38:1: warning: using '_' to ignore the result of a Void-returning function is redundant
36 |     }
37 | }
38 | _ = main()
   | `- warning: using '_' to ignore the result of a Void-returning function is redundant
39 | 

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:13:33: warning: forced cast of 'Int' to same type has no effect
11 |                 return false
12 |             }
13 |             nf = ((Int(nf) + 1) as! Int)
   |                                 `- warning: forced cast of 'Int' to same type has no effect
14 |             n = ((Int(n) / Int(i)) as! Int)
15 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:14:36: warning: forced cast of 'Int' to same type has no effect
12 |             }
13 |             nf = ((Int(nf) + 1) as! Int)
14 |             n = ((Int(n) / Int(i)) as! Int)
   |                                    `- warning: forced cast of 'Int' to same type has no effect
15 |         }
16 |         i = ((Int(i) + 1) as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:16:27: warning: forced cast of 'Int' to same type has no effect
14 |             n = ((Int(n) / Int(i)) as! Int)
15 |         }
16 |         i = ((Int(i) + 1) as! Int)
   |                           `- warning: forced cast of 'Int' to same type has no effect
17 |     }
18 |     return ((Int(nf) == Int(k)) as! Bool)

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:18:33: warning: forced cast of 'Bool' to same type has no effect
16 |         i = ((Int(i) + 1) as! Int)
17 |     }
18 |     return ((Int(nf) == Int(k)) as! Bool)
   |                                 `- warning: forced cast of 'Bool' to same type has no effect
19 | }
20 | func gen(_ k: Int, _ count: Int) -> [Int] {

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:23:21: warning: forced cast of '[Int]' to same type has no effect
21 |     var r: [Int] = ([] as! [Int])
22 |     var n = 2
23 |     while (Int((((r as! [Int])).count)) < Int(count)) {
   |                     `- warning: forced cast of '[Int]' to same type has no effect
24 |         if Bool(kPrime(&Int(n), Int(k))) {
25 |             r = (((r as! [Int]) + [Int(n)]) as! [Int])

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:24:24: error: cannot convert value of type 'Int' to expected argument type 'Int'
22 |     var n = 2
23 |     while (Int((((r as! [Int])).count)) < Int(count)) {
24 |         if Bool(kPrime(&Int(n), Int(k))) {
   |                        `- error: cannot convert value of type 'Int' to expected argument type 'Int'
25 |             r = (((r as! [Int]) + [Int(n)]) as! [Int])
26 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:24:24: error: cannot pass immutable value as inout argument: function call returns immutable value
22 |     var n = 2
23 |     while (Int((((r as! [Int])).count)) < Int(count)) {
24 |         if Bool(kPrime(&Int(n), Int(k))) {
   |                        `- error: cannot pass immutable value as inout argument: function call returns immutable value
25 |             r = (((r as! [Int]) + [Int(n)]) as! [Int])
26 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:25:22: warning: forced cast of '[Int]' to same type has no effect
23 |     while (Int((((r as! [Int])).count)) < Int(count)) {
24 |         if Bool(kPrime(&Int(n), Int(k))) {
25 |             r = (((r as! [Int]) + [Int(n)]) as! [Int])
   |                      `- warning: forced cast of '[Int]' to same type has no effect
26 |         }
27 |         n = ((Int(n) + 1) as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:27:27: warning: forced cast of 'Int' to same type has no effect
25 |             r = (((r as! [Int]) + [Int(n)]) as! [Int])
26 |         }
27 |         n = ((Int(n) + 1) as! Int)
   |                           `- warning: forced cast of 'Int' to same type has no effect
28 |     }
29 |     return (r as! [Int])

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:29:15: warning: forced cast of '[Int]' to same type has no effect
27 |         n = ((Int(n) + 1) as! Int)
28 |     }
29 |     return (r as! [Int])
   |               `- warning: forced cast of '[Int]' to same type has no effect
30 | }
31 | func main() {

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:34:104: warning: forced cast of '[Int]' to same type has no effect
32 |     var k = 1
33 |     while (Int(k) <= 5) {
34 |         print(((String(String(describing: Int(k))) + " ") + String(String(describing: (gen(Int(k), 10) as! [Int])))))
   |                                                                                                        `- warning: forced cast of '[Int]' to same type has no effect
35 |         k = ((Int(k) + 1) as! Int)
36 |     }

/tmp/TestSwiftTranspiler_Rosetta_Golden137770377/001/main.swift:35:27: warning: forced cast of 'Int' to same type has no effect
33 |     while (Int(k) <= 5) {
34 |         print(((String(String(describing: Int(k))) + " ") + String(String(describing: (gen(Int(k), 10) as! [Int])))))
35 |         k = ((Int(k) + 1) as! Int)
   |                           `- warning: forced cast of 'Int' to same type has no effect
36 |     }
37 | }
